# QtNodeEditorDemo

./: CMakeLists.txt
Demo/: CMakeLists.txt  ConditionDelegateModel.cpp  ConditionDelegateModel.h  ConnectionCondiationPopupWindow.cpp  ConnectionCondiationPopupWindow.h  ConnectionPopupWindow.cpp  ConnectionPopupWindow.h  ConnectionPopupWindow.ui  CustomSelectWidget.cpp  CustomSelectWidget.h  CustomSelectWindow.cpp  CustomSelectWindow.h  DefaultNodeData.cpp  FunctionDelegateModel.cpp  FunctionDelegateModel.h  FunctionJobInternalWidget.cpp  FunctionJobInternalWidget.h  FunctionJobInternalWidgetV1.cpp  FunctionJobInternalWidgetV1.h  ImageDefs.h  PerformanceDelegateModel.cpp  PerformanceDelegateModel.h  PerformanceJobInternalWidget.cpp  PerformanceJobInternalWidget.h  PerformanceJobInternalWidgetV1.cpp  PerformanceJobInternalWidgetV1.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
NodeEditor/: CMakeLists.txt  EditorBase.hpp  NodeModel.cpp  NodeModel.h  NodeModelBase.cpp  NodeModelBase.h  main.cpp
QtNodeEditor/: CMakeLists.txt
QtNodeEditor/Include/QtNodes/: ConnectionPopupWindowBase.h
QtNodeEditor/Include/QtNodes/internal/: AbstractGraphModel.hpp  AbstractNodeGeometry.hpp  AbstractNodePainter.hpp  BasicGraphicsScene.hpp  ConnectionGraphicsObject.hpp  ConnectionIdHash.hpp  ConnectionIdUtils.hpp  ConnectionState.hpp  ConnectionStyle.hpp  CustomNodePainter.h  DataFlowGraphModel.hpp  DataFlowGraphicsScene.hpp  DefaultNodePainter.hpp  Definitions.hpp  GraphicsView.hpp  GraphicsViewStyle.hpp  NodeData.hpp  NodeDelegateModel.hpp  NodeDelegateModelRegistry.hpp  NodeGraphicsObject.hpp  NodeState.hpp  NodeStyle.hpp  OperatingSystem.hpp  QUuidStdHash.hpp  Serializable.hpp  Style.hpp  StyleCollection.hpp  locateNode.hpp
QtNodeEditor/Resources/: DefaultStyle.json  DefaultStyle_Backup.json  resources.qrc
QtNodeEditor/Source/: AbstractGraphModel.cpp  AbstractNodeGeometry.cpp  BasicGraphicsScene.cpp  ConnectionGeometry.cpp  ConnectionGeometry.hpp  ConnectionGraphicsObject.cpp  ConnectionPainter.cpp  ConnectionPainter.hpp  ConnectionPopupWindow.cpp  ConnectionPopupWindow.h  ConnectionPopupWindow.ui  ConnectionPopupWindowBase.cpp  ConnectionState.cpp  ConnectionStyle.cpp  CustomNodeGeometry.cpp  CustomNodeGeometry.hpp  CustomNodePainter.cpp  DataFlowGraphModel.cpp  DataFlowGraphicsScene.cpp  DefaultHorizontalNodeGeometry.cpp  DefaultHorizontalNodeGeometry.hpp  DefaultNodePainter.cpp  DefaultVerticalNodeGeometry.cpp  DefaultVerticalNodeGeometry.hpp  GraphicsView.cpp  GraphicsViewStyle.cpp  NodeConnectionInteraction.cpp  NodeConnectionInteraction.hpp  NodeDelegateModel.cpp  NodeDelegateModelRegistry.cpp  NodeGraphicsObject.cpp  NodeState.cpp  NodeStyle.cpp  PathGenerationAlgorithm.h  StyleCollection.cpp  UndoCommands.cpp  UndoCommands.hpp  locateNode.cpp
Resource/styles/qt_material/: material.json
Resource/styles/qt_material/themes/: dark_blue.xml  dark_cyan.xml  dark_pink.xml  dark_yellow.xml  light_amber.xml  light_cyan_500.xml  light_lightgreen.xml  light_teal.xml
Resource/styles/qt_material_modified/: README.md  material.json
Resource/styles/qt_material_modified/themes/: dark_amber.xml  dark_lightgreen.xml  dark_purple.xml  dark_red.xml  dark_teal.xml  light_blue.xml  light_cyan.xml  light_pink.xml  light_purple.xml  light_red.xml  light_yellow.xml
